syntax = "proto3";

package abi; // 这个名字回被用作编译结果，prost 会产生: abi.rs

// 一个 ImageSpec 是一个有序的数组，服务器按照 spec 的顺序处理
message ImageSpec { repeated Spec spec = 1;}

// 处理图片改变大小
message Resize {
  uint32 width = 1;
  uint32 height = 2;

  enum ResizeType {
    NORML = 0;
    SEAM_CARVE = 1;
  }

  ResizeType rtype = 3;

  enum SampFilter {}
}